Bug 741979 - Don't require version numbers in the downloaded graphics driver blacklist. r=bjacob

--HG--
extra : rebase_source : b8abd6950804e1957d126b134146c55224288d14